Display background as letter sized sheet

--- a/preview/index.html
+++ b/preview/index.html
@@ -11,6 +11,7 @@
 
 <body>
 <nav>
+  <div id="small-title">Hurmet</div>
   <ul>
     <li><a href="/sample.html" target="_blank">Sample</a></li>
     <li><a href="/manual.html#calculation-tutorial" target="_blank">Tutorial</a></li>
@@ -28,11 +29,12 @@
   </ul>
 </nav>
 
+<div id="promotion">
 <div id="title">Hurmet</div>
- 
-<article>
+<p id="slogan">A notebook for<br>calculations</p>
+</div>
 
-<div id="slogan"><h4>Getting calculations right</h4></div>
+<article>
   
 <div id=editor class="pica" style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
@@ -80,6 +82,7 @@ end"></span></p></td>
 <div id="print-div" class="ProseMirror pica"></div>
 </article>
 
+<!--
 <div id="hint">
   <pre><code>Quick Reference
 Γ Δ Θ Λ Ξ Π Σ Φ Ψ Ω
@@ -109,7 +112,7 @@ Access:
 Display:
   ? all, @ result only
   % no echo, ! no result</code></pre>
-</div>
+</div>-->
 
 <div id="copyright">Copyright © 2020-2023 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
