Add box & annotations to sample page

--- a/site/sample.html
+++ b/site/sample.html
@@ -124,7 +124,9 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
    0.9 × 0.6 F_y d_c t_cw (1.4 - P_r//P_c) otherwise
 } = %% kips"></span>
    <span class="hurmet-calc" data-entry='{">  Fᵤ , ok" if ϕR_n > F_u; \red("<  Fᵤ, ng, doubler plates required") otherwise} = @'></span> </p>
-<p></p>
+<div class="boxed">
+  <p>Draw a box around your conclusion. It will draw attention.</p>
+</div>
 
 <h2>Rational Numbers</h2>
 <p>Hurmet numbers are rational numbers of arbitrary precision. Unlike most programming languages, Hurmet will do the following comparison correctly:</p>
@@ -147,6 +149,11 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
 <aside class="comment">Don’t forget diffs.</aside>
 <p>Reviewers can write comments that are visibly different than the document.</p>
 <p>You can save a document snapshot and later display the difference between the snapshot and the current document.</p>
+
+<h2>Annotations</h2>
+<div class="tip">
+  <p>A section can be given an annotation, like this tip. The available annotations are “Note”, “Tip”, “Important”, and “Warning”.</p>
+</div>
 
 <h2>User-Defined Functions</h2>
 <p>You can write your own Hurmet functions. The one below implements an infinite series developed by Francois Viète in 1597, to estimate the value of π. He derived this series:</p>
