Change from Hurmet.app to Hurmet.org

--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hurmet.app</title>
+  <title>Hurmet.org</title>
   <link rel="manifest" href="/app.webmanifest">
   <link rel="icon" href="./images/favicon.svg">
   <link rel="stylesheet" href="/styles.min.css">
