Change font size of doc w/o changing menu

--- a/site/offline.html
+++ b/site/offline.html
@@ -20,7 +20,7 @@
 
 <article>
 
-<div id=editor class="pica" style="margin-bottom: 23px"></div>
+<div id=editor style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
    <p></p>
    <p></p>
