--- a/preview/index.html
+++ b/preview/index.html
@@ -36,7 +36,7 @@
 
 <article>
   
-<div id=editor class="pica" style="margin-bottom: 23px"></div>
+<div id=editor style="margin-bottom: 23px"></div>
 <div style="display: none" id="content">
 
    <p>This is editable text. You can focus it and start typing. All calculations will update if you press <strong>Enter</strong> to close a calculation cell.</p>
