Update Temml CSS

--- a/site/sample.html
+++ b/site/sample.html
@@ -168,11 +168,11 @@ Say that we want to build a cylindrical water tank in 5-foot courses.
       radicand = √(2.0 + radicand)
       product = product × (radicand / 2)
    end
-   return product
+   return 2 / product
 end"></span></p>
 <p>… and now we’ll call the function and tell it to calculate the first ten terms of the series:</p>
 <p><span class="hurmet-calc" data-entry="format = &quot;h8&quot;"></span></p>
-<p><span class="hurmet-calc" data-entry="approximatePi = 2/viete(10) = ?"></span>, good to 6 significant digits. Not bad for ten terms.</p>
+<p><span class="hurmet-calc" data-entry="approximatePi = viete(10) = ?"></span>, good to 6 significant digits. Not bad for ten terms.</p>
 
 <h2>Drawings</h2>
 
