Support quote-less unit names

--- a/site/index.html
+++ b/site/index.html
@@ -64,9 +64,11 @@
    <p></p>
    <p></p>
 </div> <!-- editor -->
+<div><p style="text-align: center;">Breaking Change: A number followed by a unit name, without an intervening space, will be treated as a quantity.</p></div>
 
 <div id="print-div" class="ProseMirror pica"></div>
 </article>
+
 
 <div id="copyright">Copyright © 2020-2024 Ron Kok. Released under the <a href="https://opensource.org/licenses/MIT">MIT License</a></div>
 
